Created center CSS. Added logo. Added images folder. Modified html.

--- a/data/style.css
+++ b/data/style.css
@@ -39,3 +39,9 @@ p {
   vertical-align:middle;
   padding-bottom: 15px;
 }
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 30%;
+}
