--- a/data/style.css
+++ b/data/style.css
@@ -1,8 +1,3 @@
-/***
-   Rui Santos
-   Complete project details at https://RandomNerdTutorials.com
-***/
-
 html {
   font-family: Arial;
   display: inline-block;
@@ -20,7 +15,9 @@ p {
   border: 1px solid black;
   margin-left: auto;
   margin-right: auto;
-  width: 300px;
+  width: 500px;
+}
+.setup {
 }
 .button {
   display: inline-block;
