--- a/data/style.css
+++ b/data/style.css
@@ -37,6 +37,12 @@ p {
 .button3 {
   background-color: #800080;
 }
+.button4 {
+  background-color: #11DBBC;
+}
+.button5 {
+  background-color: #F11F85;
+}
 .units {
   font-size: 1.2rem;
  }
